# neurato

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Cold as ice.ampl  PR_PATCH_SUMMARY.md  README.md  ampl.code-workspace  config_manager_fix.py  max_config_manager_fix.patch  neurato.code-workspace  package-lock.json  simple_ui_test
.max/: config.json  project-context.json  refactor_summary.py  refactor_system.py
.max/config/versioning/: version_config.json
.windsurf/: README.md  max-framework  max_bridge.py  neurato_quest.py  pinned_tasks.json  plan_state.json  project-config.md  quest_executor.py  setup_max.sh
.windsurf/insights/: README.md
.windsurf/rules/: max-project-context.md
.windsurf/workflows/: optimization.md
assets/: Ampl.icns  Neurato.icns  generate_icons.py  generate_prod_icon_variations.py  set_app_icon.py
docs/: ARCHITECTURE.md  COMPETITIVE_PLAN.md  MILESTONES.md  PRODUCT_SPEC.md  REPO_STRUCTURE.md
docs/usage/: README.md
docs/usage/images/: README.md
examples/: LogicDAWExample.cpp  LogicDemo  LogicDemo.cpp
scripts/: audit_structure_limits.sh
src/ai/: AIComponents.cpp  AIComponents.h  AIComponents.h.impl.inc  AIComponents.hpp  AIImplementation.cpp  AIImplementation.h  AIImplementation.h.impl.inc  AIImplementation.hpp  MixAssistant.cpp
src/app/: AmplGUI.cpp  AmplMain.cpp  AmplRealGUI.cpp  AmplWorkingGUI.cpp  MacHelpers.mm  Main.cpp  Neurato  NeuratoGUI  NeuratoGUI.cpp  NeuratoMain.cpp  NeuratoRealGUI.cpp  NeuratoWorkingGUI  NeuratoWorkingGUI.cpp
src/commands/: ClipCommands.h  ClipCommands.h.impl.inc  ClipCommands.hpp  Command.h  Command.hpp  CommandManager.cpp  CommandManager.h  CommandManager.hpp  MidiCommands.h  MidiCommands.h.impl.inc  MidiCommands.hpp
src/engine/: AudioEngine.cpp  AudioEngine.h  AudioGraph.cpp  AudioGraph.h  AudioProcessors.cpp  AudioProcessors.h  AudioTrack.cpp  AudioTrack.h  Automation.cpp  Automation.h  LogicAudioEngine.cpp  LogicAudioEngine.h  LogicFeatures.cpp  LogicFeatures.h  Metronome.cpp  Metronome.h  OfflineRenderer.cpp  OfflineRenderer.h  PianoSynth.cpp  PianoSynth.h  PluginHost.cpp  PluginHost.h  PluginManager.cpp  PluginManager.h  SandboxHost.cpp  SandboxHost.h  SessionRenderer.cpp  SessionRenderer.h  Transport.cpp  Transport.h
src/engine/core/: AudioEngine.cpp  AudioEngine.hpp  AudioTrack.cpp  AudioTrack.hpp  Metronome.cpp  Metronome.hpp  Transport.cpp  Transport.hpp
src/engine/graph/: AudioGraph.cpp  AudioGraph.hpp  AudioProcessors.cpp  AudioProcessors.hpp  Automation.cpp  Automation.hpp
src/engine/io/: ExternalIOManager.cpp  ExternalIOManager.hpp
src/engine/logic/: LogicAudioEngine.cpp  LogicAudioEngine.h.impl.inc  LogicAudioEngine.hpp  LogicFeatures.cpp  LogicFeatures.h.impl.inc  LogicFeatures.hpp
src/engine/plugins/host/: PluginHost.cpp  PluginHost.h.impl.inc  PluginHost.hpp  SandboxHost.cpp  SandboxHost.hpp
src/engine/plugins/instruments/: PianoSynth.cpp  PianoSynth.hpp
src/engine/plugins/manager/: PluginManager.cpp  PluginManager.hpp
src/engine/render/: OfflineRenderer.cpp  OfflineRenderer.hpp  SessionRenderer.cpp  SessionRenderer.hpp
src/import/: LogicImporter.cpp  LogicImporter.hpp
src/model/: Clip.h  Clip.hpp  MidiClip.h  MidiClip.hpp  ProjectSerializer.cpp  ProjectSerializer.h  ProjectSerializer.hpp  Session.cpp  Session.h  Session.hpp  Track.h  Track.hpp
src/ui/: AudioClipEditor.cpp  AudioClipEditor.h  AudioFileBrowser.cpp  AudioFileBrowser.h  AudioSettingsPanel.cpp  AudioSettingsPanel.h  BounceProgressDialog.cpp  BounceProgressDialog.h  LogicMixerPanel.cpp  LogicMixerPanel.h  MixerPanel.cpp  MixerPanel.h  ModernLookAndFeel.cpp  ModernLookAndFeel.hpp  PianoRollEditor.cpp  PianoRollEditor.h  Theme.cpp  Theme.h  Theme.h.bak  Theme.hpp  TimelineView.cpp  TimelineView.h  TrackView.cpp  TrackView.h  TransportBar.cpp  TransportBar.h
src/ui/editors/: AudioClipEditor.cpp  AudioClipEditor.hpp  PianoRollEditor.cpp  PianoRollEditor.cpp.impl.inc.bak  PianoRollEditor.hpp
src/ui/panels/: PianoKeyboardPanel.cpp  PianoKeyboardPanel.hpp
src/ui/panels/io/: AudioFileBrowser.cpp  AudioFileBrowser.hpp  AudioSettingsPanel.cpp  AudioSettingsPanel.hpp  BounceProgressDialog.cpp  BounceProgressDialog.hpp
src/ui/panels/mixer/: LogicMixerPanel.cpp  LogicMixerPanel.h.impl.inc  LogicMixerPanel.hpp  MixerPanel.cpp  MixerPanel.hpp  TrackInfoPanel.cpp  TrackInfoPanel.hpp
src/ui/timeline/: TimelineView.cpp  TimelineView.cpp.impl.inc.bak  TimelineView.h.bak  TimelineView.hpp  TrackView.cpp  TrackView.hpp  TransportBar.cpp  TransportBar.hpp
src/util/: LockFreeQueue.h  LockFreeQueue.hpp  RecentProjects.cpp  RecentProjects.h  RecentProjects.hpp  Types.h  Types.hpp
tests/: CMakeLists.txt  E2EPhase3AI.cpp  E2EWorkflows.cpp  JuceGuiFixture.hpp  TestSuite.cpp  TestSuite.h  TestSuite.hpp  UnitTests.cpp
tests/e2e/: RealIOTests.cpp  package.json  playwright.config.ts
tests/unit/: test_audio_engine.cpp  test_logic_importer.cpp  test_plugin_manager.cpp
